codepkg/objects/Scoring_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Application_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Extension</label>
        <referenceTo>Application_Extension__c</referenceTo>
        <relationshipLabel>Scoring Checklists</relationshipLabel>
        <relationshipName>Scoring_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application Number</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Scoring Checklists</relationshipLabel>
        <relationshipName>Scoring_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BCA_Technical_Review_Memo_Attached__c</fullName>
        <label>BCA Technical Review Memo Attached</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Cost_Ratio_Before_Review__c</fullName>
        <formula>TEXT(Application_Extension__r.Benefit_Cost_Ratio__c)</formula>
        <label>Benefit Cost Ratio Before Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checklist_Status__c</fullName>
        <label>Checklist Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scoring/Checklist Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>TEXT(Application__r.County__c)</formula>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_10_Maximum_Points_Possible__c</fullName>
        <label>Maximum Points Possible</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_10_Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_10_Scoring_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoring Comments</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_10__c</fullName>
        <defaultValue>&apos;Scoring Criteria 10&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria 10</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_11_Maximum_Points_Possible__c</fullName>
        <label>Maximum Points Possible</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_11_Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_11_Scoring_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoring Comments</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_11__c</fullName>
        <defaultValue>&apos;Scoring Criteria 11&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria 11</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_12_Maximum_Points_Possible__c</fullName>
        <label>Maximum Points Possible</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_12_Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria_12_Scoring_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scoring Comments</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_12__c</fullName>
        <defaultValue>&apos;Scoring Criteria 12&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria 12</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entered_in_NEMIS_for_this_Incident__c</fullName>
        <label>Entered in NEMIS for this Incident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIPS_Number__c</fullName>
        <formula>Application__r.FIPS__c</formula>
        <label>FIPS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Share_Local_Match_Percentage__c</fullName>
        <formula>TEXT((1 - Application_Extension__r.Non_Federal_Cost_Share_Match_Percentage__c)*100) &amp;
			  &quot;/&quot;&amp;
			  TEXT((Application_Extension__r.Non_Federal_Cost_Share_Match_Percentage__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Share/Local Match %</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Share__c</fullName>
        <formula>Application_Extension__r.Federal_Share_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hazard_Type_Correct__c</fullName>
        <label>Hazard Type Correct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Scoring Checklists</relationshipLabel>
        <relationshipName>Scoring_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_BCR_verified_at_1_0_or_greater__c</fullName>
        <formula>TEXT(Application__r.Is_BCR_verified_at_1_0_or_greater__c)</formula>
        <label>Is BCR verified at 1.0 or greater?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_an_eligible_Activity__c</fullName>
        <formula>TEXT(Application__r.Is_this_an_eligible_Activity__c)</formula>
        <label>Is this an eligible Activity?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_this_an_eligible_Subapplicant__c</fullName>
        <formula>TEXT( Application__r.Is_this_an_eligible_Subapplicant__c )</formula>
        <label>Is this an eligible Subapplicant?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LHMP_Expiration_Date__c</fullName>
        <formula>TEXT(Application__r.Applicable_Hazard_Mitigation_pan_Expiry__c)</formula>
        <label>LHMP Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Hazard_Mitigation_Plan_Status__c</fullName>
        <formula>TEXT(Application__r.Local_Hazard_Mitigation_Plan_Status__c)</formula>
        <label>Local Hazard Mitigation Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Share__c</fullName>
        <formula>Application_Extension__r.Non_Federal_Cost_Share_Match__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Letter__c</fullName>
        <formula>Text(Application__r.Maintenance_Letter__c)</formula>
        <label>Maintenance Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Review_Date__c</fullName>
        <description>Entered the day the scoring takes place</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Management Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Match_Letter__c</fullName>
        <formula>Text( Application__r.Match_Letter__c )</formula>
        <label>Match Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OES_Analyst_Brief_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OES Analyst Brief Summary</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_1_Project_Costs__c</fullName>
        <formula>Application_Extension__r.Phase_1_Project_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 1 Project Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phase_2_Project_Costs__c</fullName>
        <formula>Application_Extension__r.Phase_2_Project_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Project Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phased_Project__c</fullName>
        <formula>TEXT(Application__r.Is_this_project_phased__c)</formula>
        <label>Phased Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Plan_Title__c</fullName>
        <formula>Application__r.Project_Plan_Title__c</formula>
        <label>Project/Plan Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type_Correct__c</fullName>
        <label>Project Type Correct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>TEXT(Application__r.Project_Type__c )</formula>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit__c</fullName>
        <formula>TEXT(Application__r.Subapplication_Complete__c )</formula>
        <label>Ready to Submit?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Panelist_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>HMA Analyst to enter their name</inlineHelpText>
        <label>Reviewer/Panelist Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subapplication_Type__c</fullName>
        <formula>TEXT(Application__r.Application_Type__c )</formula>
        <label>Subapplication Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_in_Correct_Format__c</fullName>
        <label>Title in Correct Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Points_Possible__c</fullName>
        <formula>(Criteria_1_Maximum_points_Possible__c +
Criteria_2_Maximum_points_Possible__c +
Criteria_3_Maximum_points_Possible__c +
Criteria_4_Maximum_points_Possible__c +
Criteria_5_Maximum_Points_Possible__c +
Criteria_6_Maximum_Points_Possible__c +
Criteria_7_Maximum_Points_Possible__c +
Criteria_8_Maximum_Points_Possible__c +
Criteria_9_Maximum_Points_Possible__c +
Criteria_10_Maximum_Points_Possible__c +
Criteria_11_Maximum_Points_Possible__c +
Criteria_12_Maximum_Points_Possible__c +
Criteria_13_Maximum_Points_Possible__c +
Criteria_14_Maximum_Points_Possible__c +
Criteria_15_Maximum_Points_Possible__c +
Criteria_16_Maximum_Points_Possible__c +
Criteria_17_Maximum_Points_Possible__c +
Criteria_18_Maximum_Points_Possible__c +
Criteria_19_Maximum_Points_Possible__c +
Criteria_20_Maximum_Points_Possible__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points Possible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Cost__c</fullName>
        <formula>TEXT(Application_Extension__r.Total_Project_Cost__c)</formula>
        <label>Total Project Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Criteria_1_Score__c +
Criteria_2_Score__c +
Criteria_3_Score__c +
Criteria_4_Score__c +
Criteria_5_Score__c +
Criteria_6_Score__c +
Criteria_7_Score__c +
Criteria_8_Score__c +
Criteria_9_Score__c +
Criteria_10_Score__c +
Criteria_11_Score__c +
Criteria_12_Score__c +
Criteria_13_Score__c +
Criteria_14_Score__c +
Criteria_15_Score__c +
Criteria_16_Score__c +
Criteria_17_Score__c +
Criteria_18_Score__c +
Criteria_19_Score__c +
Criteria_20_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_Benefit_Cost_Ratio_After_Review__c</fullName>
        <formula>Application__r.Verified_Benefit_Cost_Ratio_After_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verified Benefit Cost Ratio After Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scoring Checklist</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Scoring Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Score_less_than_or_equal_Maximum_Score</fullName>
        <active>false</active>
        <description>Score value must be less than OR equal to Maximum Score point</description>
        <errorConditionFormula>OR(ABS(Criteria_1_Maximum_points_Possible__c)   &lt;  ABS(Criteria_1_Score__c),
				ABS(Criteria_2_Maximum_points_Possible__c)   &lt;  ABS(Criteria_2_Score__c),
			 ABS(Criteria_3_Maximum_points_Possible__c)   &lt;  ABS(Criteria_3_Score__c),
			 ABS(Criteria_4_Maximum_points_Possible__c)   &lt;  ABS(Criteria_4_Score__c))</errorConditionFormula>
        <errorMessage>Score value must be less than OR equal to Maximum Score point</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Score_not_grater_than_Total_Points</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Score__c  &gt;  Total_Points_Possible__c</errorConditionFormula>
        <errorMessage>Total Score can not be more than Total Points Possible</errorMessage>
    </validationRules>
</CustomObject>